finish my project

--- a/Activities.html
+++ b/Activities.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
   <head>
-    <title>The New Hs-Gc Webstie | Home</title>
-    <link href="style.css" type="text/css" rel="stylesheet">
+    <title>Activities | Home</title>
+    <link href="Activities.css" type="text/css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="script.js"></script>
   </head>
@@ -12,15 +12,17 @@
       <ul>
         <li class="nav-item"><a href="index.html">Home</a></li>
         <li class="nav-item"><a href="Activities.html">Activities</a></li>
-        <li class="nav-item"><a href="Staff.html">Staff</a></li>
-        
+        <li class="nav-item"><a href="Teachers.html">Teachers</a></li>
       </ul>
     </div>
 
-    <h1>Welcome to HS-GC</h1>
+    <h1>Activities</h1>
 
     <div id="footer">
-     Prospect Heights| Classon Ave, Brooklyn NY 3rd Floor
+     Prospect Heights| Classon 
+    <p>The High School for Globalcitizenship offers lots of activities.</p>
+    <p>Such as basket ball, Script Ed, Global Kids, and Dance </p>
+     
     </div>
   </body>
 </html>
