--- a/Staff.html
+++ b/Staff.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>The New Hs-Gc Webstie | Home</title>
-    <link href="style.css" type="text/css" rel="stylesheet">
+    <link href="Staff.css" type="text/css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="script.js"></script>
   </head>
@@ -12,15 +12,18 @@
       <ul>
         <li class="nav-item"><a href="index.html">Home</a></li>
         <li class="nav-item"><a href="Activities.html">Activities</a></li>
-        <li class="nav-item"><a href="Staff.html">Staff</a></li>
+        <li class="nav-item"><a href="Staff.html">Teachers</a></li>
         
       </ul>
     </div>
 
-    <h1>Welcome to HS-GC</h1>
+    <h1>Staff</h1>
 
     <div id="footer">
      Prospect Heights| Classon Ave, Brooklyn NY 3rd Floor
+     <p>Our pricipal is Ms. Rochon she can be found in room 312. She can be contacted at mrochon@hs-gc.org
+    
+     <img src= "http://static.wixstatic.com/media/a54c4e_eb9a023a2e2744bfb3b26f4310894519.jpg_srz_600_800_85_22_0.50_1.20_0.00_jpg_srz"></img>
     </div>
   </body>
 </html>
